--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
-<div class="calculator">
-  <div class="display">0</div>
-  <div class="keys numpad">7</div>
-  <div class="keys numpad">8</div>
-  <div class="keys numpad">9</div>
-  <div class="keys operator">x</div>
-  <div class="keys numpad">4</div>
-  <div class="keys numpad">5</div>
-  <div class="keys numpad">6</div>
-  <div class="keys operator">-</div>
-  <div class="keys numpad">1</div>
-  <div class="keys numpad">2</div>
-  <div class="keys numpad">3</div>
-  <div class="keys operator">+</div>
-  <div class="keys numpad">0</div>
-  <div class="keys numpad">.</div>
-  <div class="keys clear">C</div>
-  <div class="keys equals">=</div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Basic Calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js" type="text/javascript"></script>
+  </head>
+<body>
+  <div class="calculator">
+    <div class="display">0</div>
+    <div class="keys numpad">7</div>
+    <div class="keys numpad">8</div>
+    <div class="keys numpad">9</div>
+    <div class="keys operator">x</div>
+    <div class="keys numpad">4</div>
+    <div class="keys numpad">5</div>
+    <div class="keys numpad">6</div>
+    <div class="keys operator">-</div>
+    <div class="keys numpad">1</div>
+    <div class="keys numpad">2</div>
+    <div class="keys numpad">3</div>
+    <div class="keys operator">+</div>
+    <div class="keys numpad">0</div>
+    <div class="keys numpad">.</div>
+    <div class="keys clear">C</div>
+    <div class="keys equals">=</div>
+  </div>
+</body>
+</html>
